gru/trunk/Gru/examples/example.groovy

//java -XX:+UnlockExperimentalVMOptions -XX:+EnableInvokeDynamic -cp classes:lib/groovy-1.7.5.jar:lib/commons-cli-1.2.jar:lib/asm-all-3.3.jar:lib/antlr-2.7.7.jar groovy.ui.GroovyMain examples/example.groovy

//int a = 3
//int b = 5

//"foo".foo()

//def o = "foo"

//System.out.println(o)

//a = "foo".metaClass.methods

//b = String.metaClass.methods

//System.out

System.out.println(3.metaClass.properties)
System.out.println(int.metaClass.properties)
System.out.println(Integer.metaClass.properties)

//String.getFoo()

//String.metaClass

//Class.metaClass

//System.out.println(String.metaClass) // error

//System.out.println(o.metaClass.methods)

/*
System.out.prinln("hello world")

a = "foo"
 
b = a.concat(a);

c = b.length()

System.out.println(c)

*/






 
